	PR target/19059 	* config/avr/avr.c (avr_mcu_types): Move attiny{13,2313} from avr4 	to avr2. 	* config/avr/avr.h (LINK_SPEC): Ditto. 	* config/avr/t-avr (MULTILIB_MATCHES): Ditto.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@92607 138bc75d-0d04-0410-961f-82ee72b054a4